- Removed VMStackWalker dependency - Added bootstrap work around - Renamed instance field to theUnsafe, to facilitate sun.corba.Bridge which accesses the field thru reflection.